--- a/package.json
+++ b/package.json
@@ -12,11 +12,23 @@
         "@vitejs/plugin-react": "^4.0.3",
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
+        "eslint": "^8.50.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-prettier": "^5.0.0",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "husky": "^8.0.3",
         "laravel-vite-plugin": "^0.8.0",
+        "lint-staged": "^14.0.1",
         "postcss": "^8.4.18",
+        "prettier": "^3.0.3",
+        "pretty-quick": "^3.1.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "react-sliding-side-panel": "^2.0.3"
     }
 }
