--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "lint-staged": "^14.0.1",
         "postcss": "^8.4.18",
         "prettier": "^3.0.3",
+        "prettier-plugin-tailwindcss": "^0.5.5",
         "pretty-quick": "^3.1.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -29,6 +30,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "html-react-parser": "^4.2.2",
         "react-responsive-carousel": "^3.2.23",
         "react-sliding-side-panel": "^2.0.3"
     }
