--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
+    "fslightbox-react": "^1.7.6",
     "html-react-parser": "^4.2.2",
     "react-responsive-carousel": "^3.2.23",
     "react-sliding-side-panel": "^2.0.3"
