--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "html-react-parser": "^4.2.2",
     "react-data-table-component": "^7.5.4",
     "react-responsive-carousel": "^3.2.23",
-    "react-sliding-side-panel": "^2.0.3"
+    "react-sliding-side-panel": "^2.0.3",
+    "swiper": "^11.1.4"
   }
 }
